# signal_handler

./: CMakeLists.txt  Config.cmake.in  README.md  README.rst  package.xml  readme.md
.github/workflows/: cpp_format.yml  todo_check.yml
demos/: demo.cpp
include/signal_handler/: exceptions.hpp  signal_handler.hpp
python/signal_handler/: __init__.py
src/: exceptions.cpp  signal_handler.cpp
srcpy/: wrappers.cpp  wrappers.cpp~
