<?xml version="1.0"?>
<package format="2">
  <name>signal_handler</name>
  <version>0.1.0</version>
  <description>Utilities for C++ signal handling.</description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-clause</license>
  <url type="repository">https://github.com/machines-in-motion/signal_handler</url>
  <author email="felix.widmaier@tue.mpg.de">Felix Widmaier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
