<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

  <name>signal_handler</name>
  <version>0.1.0</version>

  <description>
    Utilities for C++ signal handling.
  </description>

  <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
  <license>BSD 3-clause</license>
  <url type="repository">https://github.com/MPI-IS/signal_handler</url>
  <author email="felix.widmaier@tue.mpg.de">Felix Widmaier</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
